--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,56 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'utility';
+html,
+body {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    background-color: $primary-extra-light-color;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+div, section {
+    box-sizing: border-box;
+}
+
+
+
+
+// generic css
+.display-flex {
+    display: flex;
+}
+
+.align-item-center {
+    align-items: center;
+}
+
+.justify-content-center {
+    justify-content: center;
+}
+
+.marginNone {
+    margin: 0px !important;
+}
+
+
+.height-inherit {
+    height: inherit !important;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.text-align-center {
+    text-align: center;
+}
+
+
+// font css
+.large-font {
+    font-size: 1.25rem;
+}
+
+.extra-small-font {
+    font-size: 0.75rem;
+}
