sidenav css change

--- a/src/app/main-layout/side-nav/side-nav.component.scss
+++ b/src/app/main-layout/side-nav/side-nav.component.scss
@@ -35,6 +35,7 @@
         padding: 0.5rem 1rem;
         text-align: left;
         font-weight: 400;
+        border: 2px solid transparent;
         &:hover {
             border-left: 2px solid #ddd;
         }
